Updated rulextract documentation